--- a/home.html
+++ b/home.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Araf Ass</title>
 </head>
 <body>
-  <h1>Hi</h1>
-  <h2>Faiyaz</h2>
+    <h1>Araf penis</h1>
 </body>
 </html>
